magento/magento2#38891: Hidden dropdown in grids with select action (e.g. Content > Elements > Pages - Fix admin grid action dropdown visibility

--- a/app/design/adminhtml/Magento/backend/Magento_Ui/web/css/source/module/_data-grid.less
+++ b/app/design/adminhtml/Magento/backend/Magento_Ui/web/css/source/module/_data-grid.less
@@ -43,7 +43,7 @@
     max-width: 100%;
     padding-bottom: 1rem;
     padding-top: @data-grid-header-row__indent;
-    overflow-x: auto
+    overflow-x: visible
 }
 
 .admin__data-grid-loading-mask {
